force-app/main/default/objects/Profile_Specific_Functionality_Access__mdt/Profile_Specific_Functionality_Access__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will allow to store profile/public group specific access to BSF custom / standard functionalities</description>
    <label>Profile Specific Functionality Setting</label>
    <pluralLabel>Profile Specific Functionality Settings</pluralLabel>
</CustomObject>