force-app/main/default/objects/Profile_Specific_Functionality_Access__mdt/fields/Allowed_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Assignments__c</fullName>
    <label>Allowed Assignments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>