force-app/main/default/objects/Profile_Specific_Functionality_Access__mdt/fields/Process_Functionality_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Functionality_Name__c</fullName>
    <label>Process/Functionality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>