force-app/main/default/objects/Profile_Specific_Functionality_Access__mdt/listViews/All_New.listView-meta.xml
<ListView>
    <fullName>All_New</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Process_Functionality_Name__c</columns>
    <columns>Allowed_Assignments__c</columns>
    <columns>Assignment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All New</label>
    <language>en_US</language>
</ListView>